# AoC

./: .gitignore  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  Modules.py  README.md  pyproject.toml  requirements.txt  template.py
aoc_helper/: Modules.py  __init__.py  communicator.py  maths.py  outputs.py
aoc_helper/website_interaction/: __init__.py  cookies.py  read_input.py
solutions/: 11.py  16.py  19.py  20.py  7.py  runner.py  template.py
solutions/2015/: day1.py  day11.py  day12.py  day15.py  day16.py  day18.py  day19.py  day2.py  day20.py  day22.py  day25.py  day3.py  day5.py  day6.py  day8.py  day9.py
solutions/2016/: day2.py  day6.py  day8.py
solutions/2017/: day1.py  day2.py
solutions/2024/: day1.py  day5.py  day6.py
src/aoc_helper/: __init__.py  communicator.py  graphs.py  maths.py  outputs.py
src/solutions/: runner.py  template.py
src/solutions/2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/solutions/2016/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/solutions/2017/: day1.py  day2.py  day3.py  day4.py  day5.py
src/solutions/2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  (+8 more)
(+4 files in other folders)
